# fritz-ds

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  notebook.cmd  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: checks.yaml
src/fritz_ds_example/housing/: app.yaml  housing_data_cfg.yaml  housing_lgbm.yaml  loader.py
src/fritz_ds_example/housing/models/: housing_average.yaml  housing_lgbm.yaml  housing_rf.yaml  housing_sgd.yaml
src/fritz_ds_example/housing/pipelines/: linear_model.py  tree_based.py
src/fritz_ds_example/titanic/: app.yaml  titanic_data_cfg.yaml
src/fritz_ds_example/titanic/models/: titanic_lgbm.yaml  titanic_logreg.yaml  titanic_rf.yaml
src/fritz_ds_example/titanic/pipelines/: linear_model.py  tree_based.py
src/fritz_ds_lib/: features.py  utils.py
src/fritz_ds_lib/cli/: app.py  config.py  utils.py
src/fritz_ds_lib/core/: base.py  cereal.py  model.py  names.py  pipeline.py
src/fritz_ds_lib/data_loading/: load.py  utils.py
src/fritz_ds_lib/estimator/: adapter.py  simple.py  wrapper.py
src/fritz_ds_lib/evaluation/: metrics.py
src/fritz_ds_lib/job/: cv.py  evaluate.py  predict.py  train.py
src/fritz_ds_lib/model_selection/: config.py  cv_split.py  split.py
src/fritz_ds_lib/pipeline/: simple.py
src/fritz_ds_lib/utils/: utils.py  yaml.py
test/: conftest.py
test/examples/: test_models.py
test/resources/utils/: test_yaml_cfg.yaml
test/unit/estimator/: test_adapter.py
test/unit/model_selection/: test_split.py
test/unit/utils/: test_yaml.py
