[build-system]
requires = [
    "setuptools>=64.0.0",
    "setuptools-scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "fritz-ds"
authors = [{name = "Fritz Morgendorfer", email = "fritz.morgendorfer@gmail.com"}]
description = "Self-implemented stuff in the field of DS/ML."
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
pipe = "fritz_ds_lib.cli.app:cli"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

# automatically find packages
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.black]
line-length = 89
safe = true
skip-string-normalization = true
target-version = ['py310']

[tool.isort]
multi_line_output = 3
force_single_line = false
group_by_package = true
combine_as_imports = true
line_length = 89
include_trailing_comma = true
known_fritz = "fritz_ds_lib, fritz_ds_pipe"
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "FRITZ","LOCALFOLDER"]

[tool.flake8]
max-line-length = 89
